--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
         volumes:
             - ./payload:/app
             - /app/node_modules
+            - /etc/localtime:/etc/localtime
         depends_on:
             - mongo
 
@@ -26,7 +27,7 @@ services:
             - payload
         volumes:
             - ./web:/home/node/app
-            - /home/node/app/node_modules
+            - /etc/localtime:/etc/localtime
         env_file: ".env"
         environment:
             DATABASE_URI: "mongodb://mongo:27017/payload"
