--- a/web/package.json
+++ b/web/package.json
@@ -32,6 +32,7 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
+		"@fontsource-variable/sora": "^5.1.0",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15"
 	}
